--- a/develop.html
+++ b/develop.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hello testers</h1>
     <h1>Hello developers</h1>
-    <h2>okay done srilatha</h2>
+    <h2>okay done</h2>
+    
 </body>
 </html>
